# fasthtml-todo

./: .gitignore  Makefile  README.md  fast_html_00.py  fast_html_01.py  fast_html_01_end.py  fast_html_01_start.py  fast_html_02_end.py  fast_html_02_start.py  fast_html_03_end.py  fast_html_03_start.py  main.css  main.py  presentation.md  pyproject.toml  todo11.py  todo12.py  todo13.py  todo14.py
